# apis-ipif-solr

./: .gitignore  README.md  pyproject.toml
apis-ipif-solr/: indexes.py
apis_ipif_solr/: api_views.py  apis_ipif_solr  indexes.py  settings.py  urls.py
apis_ipif_solr/scripts/: build_indexes.py
apis_ipif_solr/templates/: index.html
scripts/: build_indexes.py
