[tool.poetry]
name = "apis-ipif-solr"
version = "0.1.0"
description = ""
authors = ["Richard Hadden <richard.hadden@oeaw.ac.at>"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
pysolaar = ">=0.8.0"
python-dateutil = ""


[tool.poetry.dev-dependencies]
black = "^20.8b1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
